--- a/templates/docker-compose.admin.yml
+++ b/templates/docker-compose.admin.yml
@@ -1,7 +1,8 @@
 version: '2'
 services:
     web-cli:
-        image: michaloo/dockerpresso-cli
+        image: wordpress:cli
+        command: bash
         env_file: .env
         volumes_from:
             - web
