--- a/templates/docker-compose.yml
+++ b/templates/docker-compose.yml
@@ -1,14 +1,13 @@
 version: '2'
 services:
     web:
-        image: michaloo/wordpress-simplified
+        image: wordpress
         env_file: .env
         volumes:
-            - web_data:/var/www/html
-            - .:/project
-            # enable line below to start theme development
+            - ./wordpress_data:/var/www/html/
+            # uncomment line below to start theme development
             # - ./example-theme-src:/var/www/html/wp-content/themes/example-theme
-            # enable line below to start plugin development
+            # uncomment line below to start plugin development
             # - ./example-plugin-src:/var/www/html/wp-content/plugins/example-plugin
         ports:
             - "80:80"
@@ -17,8 +16,9 @@ services:
     mysql:
         image: mariadb
         env_file: .env
+        ports:
+            - "3306:3306"
         volumes:
             - mysql_data:/var/lib/mysql
 volumes:
     mysql_data: {}
-    web_data: {}
